# whisperServer

./: main.py  output.json  pyproject.toml  sokrates.json  test.json  voice_sample.py
